concord_examples/tests/ui/auth_endpoint_output_not_credential.stderr
error[E0277]: the trait bound `NotCredential: CredentialMaterial` is not satisfied
  --> tests/ui/auth_endpoint_output_not_credential.rs:6:1
   |
 6 | / api! {
 7 | |     client BadEndpointOutputApi {
 8 | |         scheme: https,
 9 | |         host: "example.com",
...  |
29 | | }
   | |_^ unsatisfied trait bound
   |
help: the trait `CredentialMaterial` is not implemented for `NotCredential`
  --> tests/ui/auth_endpoint_output_not_credential.rs:4:1
   |
 4 | struct NotCredential;
   | ^^^^^^^^^^^^^^^^^^^^
help: the following other types implement trait `CredentialMaterial`
  --> $WORKSPACE/concord_core/src/auth/materials.rs
   |
   | impl CredentialMaterial for AccessToken {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `AccessToken`
...
   | impl CredentialMaterial for ApiKey {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `ApiKey`
...
   | impl CredentialMaterial for BasicCredential {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `BasicCredential`
...
   | impl CredentialMaterial for ClientCertificate {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `concord_core::auth::ClientCertificate`
note: required by a bound in `ManualCredentialProvider`
  --> $WORKSPACE/concord_core/src/auth/providers.rs
   |
   | pub struct ManualCredentialProvider<M: CredentialMaterial> {
   |                                        ^^^^^^^^^^^^^^^^^^ required by this bound in `ManualCredentialProvider`
   = note: this error originates in the macro `api` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotCredential: CredentialMaterial` is not satisfied
 --> tests/ui/auth_endpoint_output_not_credential.rs:7:12
  |
7 |     client BadEndpointOutputApi {
  |            ^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `CredentialMaterial` is not implemented for `NotCredential`
 --> tests/ui/auth_endpoint_output_not_credential.rs:4:1
  |
4 | struct NotCredential;
  | ^^^^^^^^^^^^^^^^^^^^
help: the following other types implement trait `CredentialMaterial`
 --> $WORKSPACE/concord_core/src/auth/materials.rs
  |
  | impl CredentialMaterial for AccessToken {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `AccessToken`
...
  | impl CredentialMaterial for ApiKey {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `ApiKey`
...
  | impl CredentialMaterial for BasicCredential {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `BasicCredential`
...
  | impl CredentialMaterial for ClientCertificate {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `concord_core::auth::ClientCertificate`
  = note: required for `ManualCredentialProvider<NotCredential>` to implement `CredentialProvider<BadEndpointOutputApiCx>`
note: required because it appears within the type `CredentialSlot<BadEndpointOutputApiCx, ManualCredentialProvider<NotCredential>>`
 --> $WORKSPACE/concord_core/src/auth/credentials.rs
  |
  | pub struct CredentialSlot<Cx: ClientContext, P: CredentialProvider<Cx>> {
  |            ^^^^^^^^^^^^^^
  = note: required for `Arc<CredentialSlot<BadEndpointOutputApiCx, ManualCredentialProvider<NotCredential>>>` to implement `Sync`
note: required because it appears within the type `BadEndpointOutputApiAuthState`
 --> tests/ui/auth_endpoint_output_not_credential.rs:7:12
  |
7 |     client BadEndpointOutputApi {
  |            ^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `concord_core::prelude::ClientContext::AuthState`
 --> $WORKSPACE/concord_core/src/client/context.rs
  |
  |     type AuthState: Clone + Send + Sync + 'static;
  |                                    ^^^^ required by this bound in `ClientContext::AuthState`

error[E0599]: the method `set_manual` exists for struct `Arc<CredentialSlot<BadEndpointOutputApiCx, ManualCredentialProvider<NotCredential>>>`, but its trait bounds were not satisfied
  --> tests/ui/auth_endpoint_output_not_credential.rs:6:1
   |
 4 |   struct NotCredential;
   |   -------------------- doesn't satisfy `NotCredential: CredentialMaterial`
 5 |
 6 |   api! {
   |  _^
 7 | |     client BadEndpointOutputApi {
 8 | |         scheme: https,
 9 | |         host: "example.com",
...  |
29 | | }
   | |_^ method cannot be called due to unsatisfied trait bounds
   |
  ::: $WORKSPACE/concord_core/src/auth/providers.rs
   |
   |   pub struct ManualCredentialProvider<M: CredentialMaterial> {
   |   ---------------------------------------------------------- doesn't satisfy `_: CredentialProvider<BadEndpointOutputApiCx>`
   |
   = note: the following trait bounds were not satisfied:
           `NotCredential: CredentialMaterial`
           which is required by `ManualCredentialProvider<NotCredential>: CredentialProvider<BadEndpointOutputApiCx>`
note: the trait `CredentialMaterial` must be implemented
  --> $WORKSPACE/concord_core/src/auth/credentials.rs
   |
   | pub trait CredentialMaterial: Clone + Send + Sync + 'static {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the macro `api` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: the method `clear_manual` exists for struct `Arc<CredentialSlot<BadEndpointOutputApiCx, ManualCredentialProvider<NotCredential>>>`, but its trait bounds were not satisfied
  --> tests/ui/auth_endpoint_output_not_credential.rs:6:1
   |
 4 |   struct NotCredential;
   |   -------------------- doesn't satisfy `NotCredential: CredentialMaterial`
 5 |
 6 |   api! {
   |  _^
 7 | |     client BadEndpointOutputApi {
 8 | |         scheme: https,
 9 | |         host: "example.com",
...  |
29 | | }
   | |_^ method cannot be called due to unsatisfied trait bounds
   |
  ::: $WORKSPACE/concord_core/src/auth/providers.rs
   |
   |   pub struct ManualCredentialProvider<M: CredentialMaterial> {
   |   ---------------------------------------------------------- doesn't satisfy `_: CredentialProvider<BadEndpointOutputApiCx>`
   |
   = note: the following trait bounds were not satisfied:
           `NotCredential: CredentialMaterial`
           which is required by `ManualCredentialProvider<NotCredential>: CredentialProvider<BadEndpointOutputApiCx>`
note: the trait `CredentialMaterial` must be implemented
  --> $WORKSPACE/concord_core/src/auth/credentials.rs
   |
   | pub trait CredentialMaterial: Clone + Send + Sync + 'static {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the macro `api` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: the method `has_value` exists for struct `Arc<CredentialSlot<BadEndpointOutputApiCx, ManualCredentialProvider<NotCredential>>>`, but its trait bounds were not satisfied
  --> tests/ui/auth_endpoint_output_not_credential.rs:6:1
   |
 4 |   struct NotCredential;
   |   -------------------- doesn't satisfy `NotCredential: CredentialMaterial`
 5 |
 6 |   api! {
   |  _^
 7 | |     client BadEndpointOutputApi {
 8 | |         scheme: https,
 9 | |         host: "example.com",
...  |
29 | | }
   | |_^ method cannot be called due to unsatisfied trait bounds
   |
  ::: $WORKSPACE/concord_core/src/auth/providers.rs
   |
   |   pub struct ManualCredentialProvider<M: CredentialMaterial> {
   |   ---------------------------------------------------------- doesn't satisfy `_: CredentialProvider<BadEndpointOutputApiCx>`
   |
   = note: the following trait bounds were not satisfied:
           `NotCredential: CredentialMaterial`
           which is required by `ManualCredentialProvider<NotCredential>: CredentialProvider<BadEndpointOutputApiCx>`
note: the trait `CredentialMaterial` must be implemented
  --> $WORKSPACE/concord_core/src/auth/credentials.rs
   |
   | pub trait CredentialMaterial: Clone + Send + Sync + 'static {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the macro `api` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotCredential: CredentialMaterial` is not satisfied
  --> tests/ui/auth_endpoint_output_not_credential.rs:6:1
   |
 6 | / api! {
 7 | |     client BadEndpointOutputApi {
 8 | |         scheme: https,
 9 | |         host: "example.com",
...  |
29 | | }
   | |_^ unsatisfied trait bound
   |
help: the trait `CredentialMaterial` is not implemented for `NotCredential`
  --> tests/ui/auth_endpoint_output_not_credential.rs:4:1
   |
 4 | struct NotCredential;
   | ^^^^^^^^^^^^^^^^^^^^
help: the following other types implement trait `CredentialMaterial`
  --> $WORKSPACE/concord_core/src/auth/materials.rs
   |
   | impl CredentialMaterial for AccessToken {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `AccessToken`
...
   | impl CredentialMaterial for ApiKey {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `ApiKey`
...
   | impl CredentialMaterial for BasicCredential {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `BasicCredential`
...
   | impl CredentialMaterial for ClientCertificate {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `concord_core::auth::ClientCertificate`
note: required by a bound in `ManualCredentialProvider`
  --> $WORKSPACE/concord_core/src/auth/providers.rs
   |
   | pub struct ManualCredentialProvider<M: CredentialMaterial> {
   |                                        ^^^^^^^^^^^^^^^^^^ required by this bound in `ManualCredentialProvider`

error[E0277]: the trait bound `NotCredential: CredentialMaterial` is not satisfied
  --> tests/ui/auth_endpoint_output_not_credential.rs:6:1
   |
 6 | / api! {
 7 | |     client BadEndpointOutputApi {
 8 | |         scheme: https,
 9 | |         host: "example.com",
...  |
29 | | }
   | |_^ unsatisfied trait bound
   |
help: the trait `CredentialMaterial` is not implemented for `NotCredential`
  --> tests/ui/auth_endpoint_output_not_credential.rs:4:1
   |
 4 | struct NotCredential;
   | ^^^^^^^^^^^^^^^^^^^^
help: the following other types implement trait `CredentialMaterial`
  --> $WORKSPACE/concord_core/src/auth/materials.rs
   |
   | impl CredentialMaterial for AccessToken {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `AccessToken`
...
   | impl CredentialMaterial for ApiKey {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `ApiKey`
...
   | impl CredentialMaterial for BasicCredential {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `BasicCredential`
...
   | impl CredentialMaterial for ClientCertificate {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `concord_core::auth::ClientCertificate`
   = note: required for `ManualCredentialProvider<NotCredential>` to implement `CredentialProvider<BadEndpointOutputApiCx>`

error[E0277]: the trait bound `NotCredential: CredentialMaterial` is not satisfied
  --> tests/ui/auth_endpoint_output_not_credential.rs:6:1
   |
 6 | / api! {
 7 | |     client BadEndpointOutputApi {
 8 | |         scheme: https,
 9 | |         host: "example.com",
...  |
29 | | }
   | |_^ unsatisfied trait bound
   |
help: the trait `CredentialMaterial` is not implemented for `NotCredential`
  --> tests/ui/auth_endpoint_output_not_credential.rs:4:1
   |
 4 | struct NotCredential;
   | ^^^^^^^^^^^^^^^^^^^^
help: the following other types implement trait `CredentialMaterial`
  --> $WORKSPACE/concord_core/src/auth/materials.rs
   |
   | impl CredentialMaterial for AccessToken {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `AccessToken`
...
   | impl CredentialMaterial for ApiKey {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `ApiKey`
...
   | impl CredentialMaterial for BasicCredential {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `BasicCredential`
...
   | impl CredentialMaterial for ClientCertificate {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `concord_core::auth::ClientCertificate`
   = note: required for `ManualCredentialProvider<NotCredential>` to implement `CredentialProvider<BadEndpointOutputApiCx>`
   = note: this error originates in the macro `api` (in Nightly builds, run with -Z macro-backtrace for more info)
